# noir-server

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  noir-server.kdev4
.kdev4/: noir-server.kdev4
server/: CMakeLists.txt
server/include/nrserver/db/: database.hpp
server/include/nrserver/routes/: server_router.hpp
server/include/nrserver/services/: auth_service.hpp  chat_service.hpp  connection_manager.hpp  session_manager.hpp
server/source/: main.cpp
server/source/db/: database.cpp
server/source/routes/: server_router.cpp
server/source/services/: auth_service.cpp  chat_service.cpp  connection_manager.cpp  session_manager.cpp
